--- a/web/templates/update.tmpl
+++ b/web/templates/update.tmpl
@@ -1,6 +1,6 @@
 <h3>record: {{.Id}}</h3>
 <div class="is-70 is-center">
-<form method="post" action="updateRecord" enctype="multipart/form-data">
+<form method="post" action="updateRecord">
     <div class="form-item">
         <input name="_id" type="hidden" value="{{.Id}}">
     </div>
