--- a/web/templates/keys.tmpl
+++ b/web/templates/keys.tmpl
@@ -27,6 +27,9 @@
 <form class="form-content" method="post" action="process">
     <h3>Upload via form submission</h3>
     <br/>
+    <fieldset id="Schema form">
+        {{.Form}}
+    </fieldset>
     <fieldset id="Generic">
         <legend>Generic meta-data ({{.User}})</legend>
         <div class="form-item">
