--- a/web/templates/form_entry.tmpl
+++ b/web/templates/form_entry.tmpl
@@ -1,7 +1,7 @@
 {{if .List }}
 <fieldset>
     <legend>{{.Key}}</legend>
-    <label>Description: {{.Placeholder}}</label>
+    <label>Description: {{.Description}}</label>
     <div name="{{.Key}}" class="form-item">
     <select class="is-50">
 {{range $val := .Value}}
