--- a/web/templates/keys.tmpl
+++ b/web/templates/keys.tmpl
@@ -47,7 +47,7 @@
     <fieldset id="Final" class="">
         <legend>Description meta-data ({{.User}})</legend>
         <div class="form-item">
-            <label class="is-req">Beamline Notes</label>
+            <label class="is-req">Beamline Notes (&#42;)</label>
             <textarea name="Description" rows="3" class="is-90" required></textarea>
         </div>
 
