Make bold entry for labels

--- a/web/templates/form_entry.tmpl
+++ b/web/templates/form_entry.tmpl
@@ -3,7 +3,7 @@
 {{if eq .Class  "is-req"}}
     <label class="{{.Class}}">{{.Key}} (&#42;)</label>
 {{else}}
-    <label class="{{.Class}}">{{.Key}}</label>
+    <label class="{{.Class}}"><b>{{.Key}}</b></label>
 {{end}}
 
 {{if ne .Description "Not Available"}}
@@ -26,7 +26,7 @@
 {{if eq .Class  "is-req"}}
     <label class="{{.Class}}">{{.Key}} (&#42;)</label>
 {{else}}
-    <label class="{{.Class}}">{{.Key}}</label>
+    <label class="{{.Class}}"><b>{{.Key}}</b></label>
 {{end}}
 {{if ne .Description "Not Available"}}
     <label>{{.Description}}</label>
