--- a/web/templates/form_beamline.tmpl
+++ b/web/templates/form_beamline.tmpl
@@ -13,7 +13,7 @@
         <div class="form-item">
             <div class="is-append is-push-right is-right">
                 <div class="is-80">
-                    <input type="hidden" id="Form2SchemaName" name="SchemaName" value=""/>
+                    <input type="hidden" name="SchemaName" value="{{.Beamline}}"/>
                     <input type="hidden" name="User" value="{{.User}}"/>
                 </div>
                 <button class="button">Submit</button>
