Add hidden user

--- a/web/templates/record.tmpl
+++ b/web/templates/record.tmpl
@@ -9,6 +9,7 @@
                 <div class="is-append is-push-right is-right">
                     <div class="is-80">
                     <input name="_id" type="hidden" value="{{.Id}}">
+                    <input type="hidden" name="User" value="{{.User}}"/>
                     <input name="record" type="hidden" value="{{.Record}}">
                     </div>
                     <button class="button is-secondary">Update</button>
@@ -23,6 +24,7 @@
                     <div class="is-80">
                     <input name="_id" type="hidden" value="{{.Id}}">
                     <input name="did" type="hidden" value="{{.Did}}">
+                    <input type="hidden" name="User" value="{{.User}}"/>
                     </div>
                     <button class="button is-secondary">Show files</button>
                 </div>
