--- a/web/templates/update.tmpl
+++ b/web/templates/update.tmpl
@@ -3,6 +3,7 @@
 <form method="post" action="updateRecord">
     <div class="form-item">
         <input name="_id" type="hidden" value="{{.Id}}">
+        <input type="hidden" name="User" value="{{.User}}"/>
     </div>
 {{range $i, $input := .Inputs}}
     <div class="form-item">
