--- a/web/templates/record.tmpl
+++ b/web/templates/record.tmpl
@@ -10,6 +10,7 @@
                     <div class="is-80">
                     <input name="_id" type="hidden" value="{{.Id}}">
                     <input type="hidden" name="User" value="{{.User}}"/>
+                    <input type="hidden" name="Description" value="{{.Description}}"/>
                     <input name="record" type="hidden" value="{{.Record}}">
                     </div>
                     <button class="button is-secondary">Update</button>
