Use different color for button

--- a/web/templates/keys.tmpl
+++ b/web/templates/keys.tmpl
@@ -49,7 +49,7 @@
                     <input type="hidden" id="FormSchemaName" name="SchemaName" value=""/>
                     <input type="hidden" name="User" value="{{.User}}"/>
                 </div>
-                <button class="button is-small">Upload</button>
+                <button class="button is-small is-secondary is-gray">Upload</button>
             </div>
         </div>
     </form>
