--- a/web/templates/confirm.tmpl
+++ b/web/templates/confirm.tmpl
@@ -1,5 +1,6 @@
 <div class="center-70 {{.Class}}">
-{{.Message}}
+    <div>SCHEMA: {{.Schema}}</div>
+    <div>{{.Message}}</div>
 </div>
 {{if .JsonRecord }}
 <div class="center-70">
