--- a/web/templates/keys.tmpl
+++ b/web/templates/keys.tmpl
@@ -4,6 +4,9 @@
 <div class="form-container center-90">
 
     <div class="">
+        <div>
+        <img src="images/chess-logo.png" width="200px" alt="CHESS MetaData" />
+        </div>
     <h3>Beamlines</h3>
     <select id="beamlines" class="is-50" onChange="selectBeamline();">
 {{range $b := .Beamlines}}
