Add special keywords

--- a/web/templates/searchform.tmpl
+++ b/web/templates/searchform.tmpl
@@ -27,6 +27,12 @@ Need more help on Query Language?
     Email:user@gmail.com Proposal:12345 mydescription
     </pre>
     <br/>
+    Here is a list of special keywords:
+    <ul>
+        <li><b>__all__:</b> fetch for all records</li>
+        <li><b><a href="https://www.mongodb.com/docs/manual/tutorial/query-documents/">MongoDB spec</a>:</b> fetch records based on provided MongoDB spec, e.g. <pre>{"stringkey":"chess"}</pre></li>
+    </ul>
+    <!--
     Here is a list of supported keywords along with their description:
     <ul>
         <li><b>PI:</b> name of PI, e.g. FirstName LastName</li>
@@ -52,6 +58,7 @@ Need more help on Query Language?
         <li><b>Detectors:</b> detectors name, e.g. GE</li>
         <li><b>Description:</b> beamtime notes</li>
     </ul>
+    -->
 </div>
 <br/>
 
